--- a/BnsDatafilePlugin_Template/BnsDatafilePlugin_Template.vcxproj.filters
+++ b/BnsDatafilePlugin_Template/BnsDatafilePlugin_Template.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClCompile Include="Plugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PluginConfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="deps\pugixml\pugixml.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="plugin_version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PluginConfig.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemSwapConfig.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
